<resources>
    <string name="app_name">Lab3SimpleCalculator</string>
    <string name="button07">7</string>
    <string name="button08">8</string>
    <string name="button09">9</string>
    <string name="buttonAdd">+</string>
    <string name="button04">4</string>
    <string name="button05">5</string>
    <string name="button06">6</string>
    <string name="buttonSub">-</string>
    <string name="button01">1</string>
    <string name="button02">2</string>
    <string name="button03">3</string>
    <string name="buttonMult">x</string>
    <string name="buttonCE">C</string>
    <string name="button00">0</string>
    <string name="buttonDot">.</string>
    <string name="buttonDiv">/</string>
    <string name="butonEq">=</string>
    <string name="buttonMulti">\\u00D7</string>
    <string name="buttonmult">x</string>
</resources>